[gd_scene load_steps=2 format=3 uid="uid://cuyjuwunjxclv"]

[ext_resource type="Script" uid="uid://qbi5qg8wxs8a" path="res://Source/UI/InfoShower/info_shower.gd" id="1_6im3a"]

[node name="InfoShower" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6im3a")
dice_image_paths = Array[String](["res://Assets/Textures/Dice/dice_blank.png", "res://Assets/Textures/Dice/dice1.png", "res://Assets/Textures/Dice/dice2.png", "res://Assets/Textures/Dice/dice3.png", "res://Assets/Textures/Dice/dice4.png", "res://Assets/Textures/Dice/dice5.png", "res://Assets/Textures/Dice/dice6.png"])

[node name="ScreenDim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.027451, 0.0117647, 0.054902, 0.752941)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 115
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 115

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TitleLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 160
bbcode_enabled = true
text = "Title!"
fit_content = true
horizontal_alignment = 1

[node name="TopLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "Activates with a number!"
fit_content = true
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="TextureDisplay" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(288, 288)
layout_mode = 2
mouse_filter = 2
stretch_mode = 5

[node name="BottomLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "Does a thing!"
fit_content = true
horizontal_alignment = 1

[connection signal="gui_input" from="ScreenDim" to="." method="_on_screen_dim_gui_input"]
